WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281073
Overflow:hidden fails on a transformed element inside overflow scroll (affects motionpictures.org, www.bogleheads.org)
https://bugs.webkit.org/show_bug.cgi?id=281073
Summary
Overflow:hidden fails on a transformed element inside overflow scroll (affect...
Simon Fraser (smfr)
Reported
2024-10-08 11:33:05 PDT
Summary: On
https://www.bogleheads.org/wiki/401(k
), the left sidebar contains weird artifacts. Steps To Reproduce: 1. Go to
https://www.bogleheads.org/wiki/401(k
) 2. Observe left sidebar contains artifacts that should not be there. It resembles vertical black text 3. Hover mouse over the heading in the sidebar. Observe that the artifact disappear when each heading is hovered over. 4. Scroll the page. Observe that as each heading gets bolded, the artifact disappears. 5. Scroll to the end of the page. Observe that the artifact appears again. Note that your window has to be short enough for the left sidebar to become scrollable.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-10-08 11:33:17 PDT
<
rdar://134683943
>
Simon Fraser (smfr)
Comment 2
2024-10-08 11:42:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34854
Simon Fraser (smfr)
Comment 3
2024-10-08 14:29:40 PDT
<
rdar://66751438
>
EWS
Comment 4
2024-10-08 23:24:15 PDT
Committed
284872@main
(b56addc7fbfd): <
https://commits.webkit.org/284872@main
> Reviewed commits have been landed. Closing PR #34854 and removing active labels.
EWS
Comment 5
2024-11-14 12:46:38 PST
Committed
283286.479@safari-7620-branch
(bc5fc1e127bd): <
https://commits.webkit.org/283286.479@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug